# advent-of-code

./: README.org
python/2023/: README.org  pyproject.toml
python/2023/src/andy_aoc_2023/: BIG_INPUTS  BIG_MAPS  day1.py  day2.py  day4.py  day5.py  day6.py
